<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:background="@color/black_effective">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:orientation="horizontal"
            android:gravity="center|start">

        <ImageButton
                style="@style/Button.ImageButton"
                android:id="@+id/nav_back_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:background="@color/transparent"
                android:tint="@color/white"
                app:srcCompat="@drawable/ic_keyboard_backspace_24px"/>

        <TextView
                style="@style/TextStyle.Heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:text="@string/about"/>
    </LinearLayout>

    <TextView
            style="@style/TextStyle.Heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:padding="20dp"
            android:autoLink="web"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:text="@string/project_info"/>

    <TextView
            style="@style/TextStyle.Title"
            android:id="@+id/tv_mvp_blog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:autoLink="web"
            android:textColor="@color/white"
            android:text="@string/link_mvp_blog"/>

    <TextView
            style="@style/TextStyle.Title"
            android:id="@+id/tv_mvp_repo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:autoLink="web"
            android:textColor="@color/white"
            android:text="@string/link_mvp_repo"/>

    <TextView
            style="@style/TextStyle.Title"
            android:id="@+id/tv_mindorks_blog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:autoLink="web"
            android:textColor="@color/white"
            android:text="@string/link_mindorks_blog"/>

    <TextView
            style="@style/TextStyle.Title"
            android:id="@+id/tv_mindorks_repo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:autoLink="web"
            android:textColor="@color/white"
            android:text="@string/link_mindorks_repo"/>
</LinearLayout>