<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:id="@+id/linearLayoutView"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:gravity="center">

    <ImageView
            android:id="@+id/imageViewEmpty"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:contentDescription="@null"
            app:srcCompat="@drawable/ic_rabbit"/>

    <TextView
            style="@style/TextStyle.Title"
            android:id="@+id/tv_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:textColor="@color/gray"
            android:text="@string/empty_screen"/>

    <TextView
            style="@style/TextStyle.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:textColor="@color/gray"
            android:text="@string/please_retry"/>

    <Button
            style="@style/Button.Primary.Quiz.Empty"
            android:id="@+id/btn_retry"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:textSize="20sp"
            android:text="@string/retry"/>
</LinearLayout>