<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_design">

    <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="80dp"
            android:layout_marginBottom="80dp"
            app:cardCornerRadius="7dp"
            app:cardElevation="22dp">

        <TextView
                style="@style/TextStyle.Heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|top"
                android:layout_marginTop="60dp"
                android:textAllCaps="true"
                android:textSize="20sp"
                android:text="@string/login_dummy"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
                    android:textColorHint="@color/gray">

                <android.support.design.widget.TextInputEditText
                        style="@style/TextStyle"
                        android:id="@+id/et_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:paddingBottom="10dp"
                        android:gravity="center|left|bottom"
                        android:background="@drawable/input_border_bottom"
                        android:inputType="textEmailAddress"
                        android:cursorVisible="true"
                        android:maxLength="50"
                        android:textSize="18sp"
                        android:textColor="@color/black_effective"
                        android:hint="@string/email"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
                    app:passwordToggleEnabled="true"
                    android:textColorHint="@color/gray"
                    android:hint="@string/password">

                <android.support.design.widget.TextInputEditText
                        style="@style/TextStyle"
                        android:id="@+id/et_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginTop="30dp"
                        android:paddingBottom="10dp"
                        android:gravity="center|left|bottom"
                        android:background="@drawable/input_border_bottom"
                        android:inputType="textPassword"
                        android:cursorVisible="true"
                        android:maxLength="50"
                        android:textSize="18sp"
                        android:textColor="@color/black_effective"/>

            </android.support.design.widget.TextInputLayout>

            <Button
                    style="@style/Button.Primary"
                    android:id="@+id/btn_server_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="15dp"
                    android:padding="10dp"
                    android:textSize="18dp"
                    android:text="@string/login"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_marginBottom="40dp"
                android:orientation="horizontal">

            <ImageButton
                    android:id="@+id/ib_google_login"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@color/transparent"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/ic_google_plus"/>

            <ImageButton
                    android:id="@+id/ib_fb_login"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="24dp"
                    android:background="@color/transparent"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/ic_facebook"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>
